[package]
name = "vanity_onion_address"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = "1.0.1"
rand = "0.7.0"
sha2 = "0.10.2"
data-encoding = "2.3.2"
num_cpus = "1.13.1"

[profile.release]
lto = true
opt-level = 3
overflow-checks = false
